rgw_admin: improve period update errors

Basically if we do a period update on a realm with multiple masters, we
fail stating invalid argument, improving this to suggest that we have
actually errored out because of multiple master zg in a realm

Fixes: http://tracker.ceph.com/issues/15251
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>